[package]
name = "probabilistic-collections"
version = "0.5.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/probabilistic-collections-rs"
documentation = "https://docs.rs/probabilistic-collections"
description = """
Various implementations of collections that use randomization to improve on running time or memory,
but introduce a certain amount of error
"""
categories = ["algorithms", "data-structures"]
keywords = ["collections", "data-structures", "probabilistic"]
include = ["src/**/*", "Cargo.toml"]

[badges]
travis-ci = { repository = "jeffrey-xiao/probabilistic-collections-rs", branch = "master" }
codecov = { repository = "jeffrey-xiao/probabilistic-collections-rs", service = "gitlab" }

[dependencies]
byteorder = "1"
bincode = "1.0"
siphasher = "0.2"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
rand = "0.4"

[dev-dependencies]
serde_test = "1.0"
