[package]
name = "probabilistic-collections"
version = "0.7.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/probabilistic-collections-rs"
documentation = "https://docs.rs/probabilistic-collections"
description = """
Various implementations of collections that use approximations to improve on running time or memory,
but introduce a certain amount of error.
"""
categories = ["algorithms", "data-structures"]
keywords = ["collections", "data-structures", "probabilistic"]
include = ["src/**/*", "Cargo.toml"]
edition = "2018"

[badges]
gitlab = { repository = "jeffrey-xiao/probabilistic-collections-rs", branch = "master" }

[dependencies]
bincode = "1.0"
byteorder = "1"
rand = "0.7.0"
rand_xorshift = "0.2.0"
siphasher = "0.3.2"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0.103"
default-features = false
features = ["std", "derive"]

[features]
serde = ["siphasher/serde", "serde_crate"]
